# mev-resist-consensus

./: .gitignore  .pylintrc  .travis.yml  README.md  block_analysis.json  pbs_log.txt  pos_log.txt  pyproject.toml  simulation_log.txt  test_restaking.py  test_restaking_new.py  transactions.csv
assets/: Front running.drawio  PBS_agents.drawio  POS_agents.drawio  Untitled Diagram.drawio  agent workflow.drawio  bid_rounds.drawio  both_agents.drawio  network.drawio  node connectivity.drawio  pos workflow.drawio  pos_decision.drawio  reward_comparison.drawio
blockchain_env/: __init__.py  account.py  bidding.py  block.py  builder.py  chain.py  compare.py  constants.py  data_loader.py  environment.py  eth.py  mev.py  multi_block_sim.py  network.py  node.py  pbs_simulation_blocks.csv  proposer.py  restaking_pbs.py  restaking_pos.py  settings.py  simulate_pbs.py  simulate_pos.py  test.py  transaction.py  user.py  validator.py
pbs_c/: BuilderAttackerText.cpp  CMakeLists.txt  MevGame.cpp  main.cpp
pbs_c/blockchain_env/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  Builder.cpp  Builder.h  Mempool.cpp  Mempool.h  Node.cpp  Node.h  Transaction.cpp  Transaction.h  User.cpp  User.h
pbs_c/factory/: BuilderFactory.cpp  BuilderFactory.h  NodeFactory.cpp  NodeFactory.h  TransactionFactory.cpp  TransactionFactory.h
pbs_c/game_env/: Attacker.cpp  Attacker.h  AttackerBuilder.cpp  AttackerBuilder.h  Auction.cpp  Auction.h  Proposer.cpp  Proposer.h  ProposerBuilder.cpp  ProposerBuilder.h
pbs_c/include/: Random.cpp  Random.h  RandomNumberData.cpp  RandomNumberData.h
(+20662 files in other folders)
